--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     ]
   },
   "dependencies": {
+    "3box": "^1.16.2",
     "@rowno/sparkline": "^4.0.0",
     "antd": "^3.20.3",
     "bootstrap-css-only": "^4.3.1",
@@ -72,7 +73,8 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.5",
     "redux-thunk": "^2.3.0",
-    "store": "^2.0.12"
+    "store": "^2.0.12",
+    "web3": "^1.2.6"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.4.4",
