--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "3box": "^1.16.2",
     "@rowno/sparkline": "^4.0.0",
+    "@walletconnect/web3-provider": "^1.0.0-beta.47",
     "antd": "^3.20.3",
     "bootstrap-css-only": "^4.3.1",
     "chart.js": "^2.8.0",
