--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "3box": "^1.16.2",
+    "3box-profile-edit-react": "^0.0.7",
     "@rowno/sparkline": "^4.0.0",
     "@walletconnect/web3-provider": "^1.0.0-beta.47",
     "antd": "^3.20.3",
