--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lodash": "^4.17.14",
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
+    "orbit-db-keystore": "0.3.4",
     "peity-react": "^0.0.7",
     "prop-types": "^15.7.2",
     "qs": "^6.7.0",
